feat: support routerx options header
